--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "jalaali-js": "^1.1.0",
     "lodash": "^4.17.11",
     "moment-jalaali": "^0.8.3",
+    "prop-types": "latest",
     "react": "16.8.3",
     "react-native": "0.59.5",
-    "react-navigation": "^3.9.1",
-    "prop-types": "latest"
+    "react-native-raw-bottom-sheet": "^1.1.4",
+    "react-navigation": "^3.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
